Disable import rule for eslint.

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,5 +18,6 @@
     no-console: ["error", { allow: ["warn", "info", "error"] }],
     no-restricted-syntax: "off",
     no-mixed-operators: "off",
+    "import/extensions": "off"
   }
 }
