--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "bc19run -b bots -r bots",
     "watch": "NODE_ENV=test jest --watch",
+    "coverage": "NODE_ENV=test jest --coverage",
     "build": "rm -rf dist;mkdir dist;bc19compile -d bots -o dist/index.js",
     "help": "bc19run"
   },
