--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "coverage": "NODE_ENV=test jest --coverage",
     "build": "rm -rf dist;mkdir dist;bc19compile -d bots -o dist/index.js",
     "upload": "BC_USERNAME='Maven' BC_PASSWORD='EAN2#ksa' bc19upload -i dist/index.js",
+    "testmocha":"mocha --compilers js:babel-core/register test/**/*.test.js",
     "help": "bc19run"
   },
   "dependencies": {
     "bc19": "^0.4.6"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0",
-    "@babel/preset-react": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
@@ -26,6 +27,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.15.0",
     "eslint-plugin-jest": "^22.1.3",
-    "jest": "^24.0.0"
+    "jest": "^24.0.0",
+    "mocha": "^6.0.2"
   }
 }
